--- a/Image_Classification_Keras.ipynb
+++ b/Image_Classification_Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9HOJI3a6AiTcVEUmYWJTf",
+      "authorship_tag": "ABX9TyMF1dgPoU9o6MtiYio4LFma",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "WAheVyjzXGoP"
       },
@@ -52,7 +52,7 @@
         "id": "pnsbtSaMXQgH",
         "outputId": "b1f30966-d715-4564-8246-a5c946a2c2a6"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
         "id": "rM2UHTB1X85X",
         "outputId": "b614a74e-5966-4abb-e620-d13697dd99ec"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "ndxZglAQXpt8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
       "metadata": {
         "id": "LHcQjAS2YFKm"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "bf9yBj5lYUX7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -219,7 +219,7 @@
         "id": "k0JPgd0VfRHS",
         "outputId": "3c8b0683-1815-4345-b134-9f029e345a18"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
         "id": "jA_Mb582gfrp",
         "outputId": "1380508d-4713-458f-d019-814fdc3372b4"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,9 +366,149 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "model.fit(train_X,train_Y,validation_data=(test_X,test_Y),epochs=10,batch_size=32)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZqMJaKiOgpdx",
+        "outputId": "c273e0e1-19db-4383-edd6-3750c08266aa"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m237s\u001b[0m 151ms/step - accuracy: 0.1014 - loss: 2.3038 - val_accuracy: 0.1000 - val_loss: 2.3033\n",
+            "Epoch 2/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m248s\u001b[0m 142ms/step - accuracy: 0.0968 - loss: 2.3035 - val_accuracy: 0.1000 - val_loss: 2.3033\n",
+            "Epoch 3/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m224s\u001b[0m 143ms/step - accuracy: 0.1004 - loss: 2.3033 - val_accuracy: 0.1000 - val_loss: 2.3038\n",
+            "Epoch 4/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m264s\u001b[0m 145ms/step - accuracy: 0.1006 - loss: 2.3036 - val_accuracy: 0.1000 - val_loss: 2.3027\n",
+            "Epoch 5/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m262s\u001b[0m 145ms/step - accuracy: 0.1014 - loss: 2.3030 - val_accuracy: 0.1000 - val_loss: 2.3033\n",
+            "Epoch 6/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m261s\u001b[0m 144ms/step - accuracy: 0.0966 - loss: 2.3034 - val_accuracy: 0.1000 - val_loss: 2.3033\n",
+            "Epoch 7/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m258s\u001b[0m 142ms/step - accuracy: 0.1006 - loss: 2.3032 - val_accuracy: 0.1000 - val_loss: 2.3036\n",
+            "Epoch 8/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m262s\u001b[0m 142ms/step - accuracy: 0.0997 - loss: 2.3035 - val_accuracy: 0.1000 - val_loss: 2.3029\n",
+            "Epoch 9/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m260s\u001b[0m 141ms/step - accuracy: 0.0998 - loss: 2.3034 - val_accuracy: 0.1000 - val_loss: 2.3029\n",
+            "Epoch 10/10\n",
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m263s\u001b[0m 141ms/step - accuracy: 0.0989 - loss: 2.3033 - val_accuracy: 0.1000 - val_loss: 2.3035\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7a2cfa04d270>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "_,acc=model.evaluate(test_X,test_Y)\n",
+        "print(acc*100)"
+      ],
+      "metadata": {
+        "id": "VJEUwqPBhbiH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6281bf97-ee9f-4f4d-b2ce-868f80c4e83a"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 34ms/step - accuracy: 0.0995 - loss: 2.3040\n",
+            "10.000000149011612\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#save model\n",
+        "model.save('my_model.keras')"
+      ],
+      "metadata": {
+        "id": "CEGzZtrYrbuy"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "results={\n",
+        "   0:'aeroplane',\n",
+        "   1:'automobile',\n",
+        "   2:'bird',\n",
+        "   3:'cat',\n",
+        "   4:'deer',\n",
+        "   5:'dog',\n",
+        "   6:'frog',\n",
+        "   7:'horse',\n",
+        "   8:'ship',\n",
+        "   9:'truck'\n",
+        "}\n",
+        "from PIL import Image\n",
+        "import numpy as np\n",
+        "# Replace '__image_path__' with the actual path to your image\n",
+        "im=Image.open(\"/path/to/your/image.jpg\")\n",
+        "# the input image is required to be in the shape of dataset, i.e (32,32,3)\n",
+        "\n",
+        "im=im.resize((32,32))\n",
+        "im=np.expand_dims(im,axis=0)\n",
+        "im=np.array(im)\n",
+        "pred=model.predict_classes([im])[0]\n",
+        "print(pred,results[pred])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 332
+        },
+        "id": "KFiJWRfpr4S2",
+        "outputId": "a8310704-da16-4e2a-b465-d61f6d90a259"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: '/path/to/your/image.jpg'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-32-df2563325743>\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# Replace '__image_path__' with the actual path to your image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/path/to/your/image.jpg\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;31m# the input image is required to be in the shape of dataset, i.e (32,32,3)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   3225\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3226\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3227\u001b[0;31m         \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3228\u001b[0m         \u001b[0mexclusive_fp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3229\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/path/to/your/image.jpg'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZqMJaKiOgpdx"
+        "id": "ejwtty9qsJHw"
       },
       "execution_count": null,
       "outputs": []
